# Mips_oblig_2

./: README.md  pyproject.toml  requirements.txt  result
report/: report.txt
src/: ALU.py  controlUnit.py  controller.py  cpuElement.py  dataMemory.py  instructionMemory.py  memory.py  mipsSimulator.py  pc.py  registerFile.py  selectionsort.mem  simulator.py
tests/: README.md
tests/memfiles/: add.mem  beq.mem  simple_one.mem  test.mem
